[gd_scene load_steps=51 format=2]

[ext_resource path="res://assets/sprites/player.png" type="Texture" id=1]
[ext_resource path="res://src/player/states/PlayerStateMachine.gd" type="Script" id=2]
[ext_resource path="res://src/Player/states/PlayerIdleState.gd" type="Script" id=3]
[ext_resource path="res://src/Player/states/MoveState.gd" type="Script" id=4]
[ext_resource path="res://src/player/Player.gd" type="Script" id=5]
[ext_resource path="res://src/player/states/ControlState.gd" type="Script" id=6]
[ext_resource path="res://src/player/ui/ActionDialogue.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/player/states/BuildState.gd" type="Script" id=8]
[ext_resource path="res://src/player/states/PlayerHitState.gd" type="Script" id=9]
[ext_resource path="res://src/player/Dizzy.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/overlay/Hurtbox.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/player/states/RepairState.gd" type="Script" id=12]
[ext_resource path="res://src/player/ui/PlayerAction.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/materials/HitShader.tres" type="Material" id=14]
[ext_resource path="res://src/player/states/DeadState.gd" type="Script" id=15]
[ext_resource path="res://assets/sounds/step.ogg" type="AudioStream" id=16]
[ext_resource path="res://assets/sounds/hurt.wav" type="AudioStream" id=17]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 8.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=29]
resource_name = "hit"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle_down"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle_left"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
resource_name = "idle_right"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle_up"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=4]
resource_name = "move_down"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 6, 9 ]
}

[sub_resource type="Animation" id=5]
resource_name = "move_left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 4, 7, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "move_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 4, 7, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "move_up"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 5, 8, 11 ]
}

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "RESET"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "hit"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=15]
blend_point_0/node = SubResource( 11 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 12 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 13 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 14 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeTimeScale" id=23]

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "move_left"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "move_right"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "move_down"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "move_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 20 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 21 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeBlendTree" id=24]
nodes/TimeScale/node = SubResource( 23 )
nodes/TimeScale/position = Vector2( 360, 50 )
nodes/output/position = Vector2( 560, 60 )
nodes/velocity/node = SubResource( 22 )
nodes/velocity/position = Vector2( 140, 50 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "velocity" ]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachine" id=16]
states/RESET/node = SubResource( 30 )
states/RESET/position = Vector2( 125, 136.5 )
states/hit/node = SubResource( 31 )
states/hit/position = Vector2( 268, 219 )
states/idle/node = SubResource( 15 )
states/idle/position = Vector2( 254, 65 )
states/move/node = SubResource( 24 )
states/move/position = Vector2( 498, 71.5 )
transitions = [ "idle", "move", SubResource( 25 ), "move", "idle", SubResource( 26 ), "hit", "RESET", SubResource( 32 ), "RESET", "idle", SubResource( 33 ), "idle", "hit", SubResource( 34 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=17]

[sub_resource type="CapsuleShape2D" id=35]
radius = 7.0
height = 6.0

[node name="Player" type="KinematicBody2D"]
z_index = 2
collision_layer = 2
collision_mask = 65
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 14 )
position = Vector2( 0, -1 )
texture = ExtResource( 1 )
hframes = 3
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/RESET = SubResource( 2 )
anims/hit = SubResource( 29 )
anims/idle_down = SubResource( 6 )
anims/idle_left = SubResource( 7 )
anims/idle_right = SubResource( 10 )
anims/idle_up = SubResource( 8 )
anims/move_down = SubResource( 4 )
anims/move_left = SubResource( 5 )
anims/move_right = SubResource( 9 )
anims/move_up = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 16 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 17 )
parameters/idle/blend_position = Vector2( 1, 0 )
parameters/move/TimeScale/scale = 0.5
parameters/move/velocity/blend_position = Vector2( 1, 0 )

[node name="Hurtbox" parent="." instance=ExtResource( 11 )]
collision_layer = 2
collision_mask = 64
monitorable = true

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 35 )

[node name="AreaDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1048
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetector"]
shape = SubResource( 1 )

[node name="Dizzy" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( 1, -12 )

[node name="PlayerAction" parent="." instance=ExtResource( 13 )]
visible = false
position = Vector2( 0, -28 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 0.8, 1.2 )

[node name="ActionDialogue" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 0, -25 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource( 3 )

[node name="Move" type="Node2D" parent="StateMachine"]
script = ExtResource( 4 )

[node name="SFX" type="AudioStreamPlayer2D" parent="StateMachine/Move"]
stream = ExtResource( 16 )
volume_db = 10.0
pitch_scale = 0.5

[node name="Control" type="Node2D" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Build" type="Node2D" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Hit" type="Node2D" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="StateMachine/Hit"]
wait_time = 5.0
one_shot = true

[node name="SFX" type="AudioStreamPlayer2D" parent="StateMachine/Hit"]
stream = ExtResource( 17 )

[node name="Repair" type="Node2D" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Dead" type="Node2D" parent="StateMachine"]
script = ExtResource( 15 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="AreaDetector" to="." method="_on_AreaDetector_area_entered"]
[connection signal="area_exited" from="AreaDetector" to="." method="_on_AreaDetector_area_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="StateMachine/Hit/Timer" to="StateMachine/Hit" method="_on_Timer_timeout"]

[editable path="Hurtbox"]
